--- a/src/css/header.css
+++ b/src/css/header.css
@@ -5,7 +5,7 @@
   height: 60px;
   position: fixed;
   top: 0;
-  padding-left: 10px;
+  padding-left: 50px;
 }
 
 .header h1 {
@@ -14,7 +14,7 @@
   color: black;
 }
 
-.cart-img {
+.header .cart-img {
   height: 35px;
   padding: 10px;
   opacity: 0.6;
@@ -25,13 +25,13 @@
   margin-right: 90px;
 }
 
-.cart-count {
+.header .cart-count {
   color: white;
   /* font-weight: bold; */
   font-size: 15px;
   display: flex;
   align-items: center;
-  background: #f79a22;
+  background: #eca72f;
   width: 25px;
   height: 25px;
   border-radius: 50%;
@@ -41,4 +41,9 @@
 
   position: fixed;
   right: 0;
+}
+
+.flip-image {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
