--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -1,8 +1,9 @@
 .cart-container {
-  /* border: 2px solid; */
+  /* border: 2px solid red; */
   margin-top: 50px;
   padding: 10px 0 10px 40px;
-  margin-bottom: 60px;
   /* background: url('https://wallpaperaccess.com/full/359397.jpg'); */
   /* background: linear-gradient(white, rgba(96, 145, 250, 0.562)); */
+  float: left;
+  /* width: 50vw; */
 }
