--- a/src/css/addEmoji.css
+++ b/src/css/addEmoji.css
@@ -1,6 +1,6 @@
 .add-emoji-container {
   width: 100%;
-  height: 90%;
+  height: 88%;
   border-bottom: 2px solid #99c6d48c;
 }
 
@@ -59,4 +59,32 @@
   color: grey;
   text-align: center;
   background-color: #c6eaf5ad;
+}
+
+@media only screen and (max-width: 768px) {
+  .add-emoji-container main {
+    /* border: 2px solid red; */
+    height: auto;
+    width: 100%;
+    padding-top: 15px;
+  }
+
+  .add-emoji-container input {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .add-emoji-container .submit-btn {
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+
+  #emoji-field {
+    width: 95px;
+  }
+
+  .add-emoji-container button {
+    padding: 11.5px;
+    background: #9bc8d688;
+  }
 }
