--- a/src/css/cartItem.css
+++ b/src/css/cartItem.css
@@ -53,6 +53,7 @@
 .cart-details-cntr h4 {
   font-size: 18px;
   font-weight: 500;
+  text-transform: capitalize;
 }
 
 .cart-details-cntr p {
@@ -63,4 +64,24 @@
   height: 1px;
   width: 420px;
   background-color: rgba(0, 0, 0, 0.253);
+}
+
+@media only screen and (max-width: 768px) {
+  .cart-item-dividor:not(:last-child) {
+    width: 80%;
+  }
+
+  .cart-item-container {
+    width: 100vw;
+  }
+  .cart-details-cntr h4 {
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 3px;
+    width: 80%;
+  }
+  .cart-details-cntr p {
+    font-weight: 300;
+    font-size: 14px;
+  }
 }
