--- a/src/css/header.css
+++ b/src/css/header.css
@@ -10,8 +10,9 @@
 
 .header h1 {
   float: left;
-  font-weight: 100;
+  font-weight: 500;
   color: black;
+  color: #0270afb0;
 }
 
 .header .cart-img {
@@ -46,4 +47,24 @@
 .flip-image {
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
+}
+
+@media only screen and (max-width: 768px) {
+  .header {
+    padding-left: 20px;
+    width: 111vw;
+  }
+  .header h1 {
+    font-weight: 500;
+    font-size: 20px;
+  }
+
+  .header .cart-img {
+    margin-right: 17px;
+  }
+
+  .header .cart-count {
+    margin-top: -18px;
+    margin-right: 15px;
+  }
 }
