--- a/src/css/sidemenu.css
+++ b/src/css/sidemenu.css
@@ -15,3 +15,23 @@
   font-size: 30px;
   margin-right: 15px;
 }
+
+@media only screen and (max-width: 768px) {
+  .side-menu-container {
+    /* border: 2px solid purple; */
+    position: initial;
+    /* FIXME: why 100vw not working? */
+    width: 100vw;
+    height: 50vh;
+    float: none;
+    margin-top: 60px;
+  }
+
+  .total-price {
+    font-weight: 300;
+    font-size: 20px;
+    margin-right: 10px;
+    padding: 8px;
+    /* REVIEW : can be made sticky */
+  }
+}
