--- a/src/css/addEmoji.css
+++ b/src/css/addEmoji.css
@@ -66,7 +66,9 @@
     /* border: 2px solid red; */
     height: auto;
     width: 100%;
-    padding-top: 15px;
+    padding-top: 25px;
+    padding-bottom: 15px;
+    position: initial;
   }
 
   .add-emoji-container input {
