--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -9,6 +9,16 @@
   flex-direction: column-reverse;
 }
 
+.loading-icon {
+  height: 70px;
+  width: 320px;
+  margin-top: 30px;
+}
+.loading-icon img {
+  height: 100%;
+  width: 100%;
+}
+
 @media only screen and (max-width: 768px) {
   .cart-container {
     /* border: 2px solid green; */
@@ -17,5 +27,9 @@
     float: none;
     width: 100%;
     margin: 0;
+  }
+
+  .loading-icon {
+    width: 80%;
   }
 }
