--- a/src/css/common.css
+++ b/src/css/common.css
@@ -37,3 +37,7 @@ body {
   user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
 }
+
+.cantDoCursor {
+  cursor: not-allowed !important;
+}
