--- a/src/css/cartItem.css
+++ b/src/css/cartItem.css
@@ -14,13 +14,14 @@
   /* border: 2px solid red; */
   font-size: 30px;
   padding: 10px;
+  transition: 1s all;
+  cursor: default;
 }
 
 .cart-item-container .cart-img:hover {
   transition: 1s all;
-  transform: scale(1.3);
+  transform: scale(1.2);
   /* transform: translate3d(-10px, -10px, 10px); */
-  transform: fl;
 }
 
 .cart-details-cntr {
@@ -32,6 +33,10 @@
 .cart-btns-cntr {
   margin-top: 2px;
   padding: 5px;
+}
+
+.action-icons:active {
+  transform: scale(0.9);
 }
 
 .cart-btns-cntr img:first-child {
